tests/samples/failing/07_match_requires_wildcard.mlang
// エッジケース: 無限集合型に対する非網羅的なmatch式はコンパイルエラーになる

fn classify_score |score: i32|->i32 match score {
    0 => 0,
};
